# CrystalWiiLauncher

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: release.yml
assets/: resources.qrc
assets/themes/default/: theme.json
docs/: FORMATS.md  THEMING.md
include/controllers/: ControllerManager.hpp
include/core/: Logger.hpp  Settings.hpp
include/discs/: DiscScanner.hpp
include/dolphin/: DolphinManager.hpp
include/games/: GameEntry.hpp  GameLibrary.hpp
include/settings/: SettingsDialog.hpp
include/ui/: ChannelGridWidget.hpp  MainWindow.hpp  WiiPointer.hpp
include/updater/: UpdateManager.hpp
src/: main.cpp
src/controllers/: ControllerManager.cpp
src/core/: Logger.cpp  Settings.cpp
src/discs/: DiscScanner.cpp
src/dolphin/: DolphinManager.cpp
src/games/: GameLibrary.cpp
src/settings/: SettingsDialog.cpp
src/ui/: ChannelGridWidget.cpp  MainWindow.cpp  WiiPointer.cpp
src/updater/: UpdateManager.cpp
